Add Authentication and Redis Cache.
Authentication with JWT and Redis caching:
- Add Authentication domain.
* AuthenticationRequest, AuthenticationResponse, AuthenticationService, AuthenticationController
- Add RedisConfiguration